# symposium

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  Cargo.toml.dialectic  FRESH_CONTEXT_SUMMARY.md  Info.plist  Package.swift  README.md  book.toml  bringing-it-all-together.md  build-app.sh  chapters-to-remove.md  create-app-icon.sh  features.yaml  guidance.md  hide-menu-bar.js  mcp-servers.json  taskspace-implementation-guide.md  test_mermaid.md  test_taskspace_tools.sh  wip-design-overlap-analysis.md  xxx.logs
.cargo/: config.toml
.github/workflows/: ci.yml  mdbook.yml
.kiro/steering/: product.md  structure.md  tech.md
.socratic-shell/: .commit-stamp
Sources/Symposium/: App.swift  CGSWindowManager.swift  ContentView.swift  PrivateAPI.swift  WindowManager.swift
application/osx/: AppIcon.icns  Info.plist  Package.swift  build-app.sh
artwork/: create-app-icon.sh
ci/: Cargo.toml
ci/src/: main.rs
cli-agent-util/: Cargo.toml
cli-agent-util/src/: lib.rs
ide/vscode/: package-lock.json  package.json  symposium-0.1.0.vsix  webpack.config.js
mcp-server/: .socratic-shell-review.json  Cargo.toml
mcp-server/src/: agent_manager.rs  constants.rs  daemon.rs  dialect.rs  ipc.rs  lib.rs  main.rs  pid_discovery.rs  reference_store.rs  server.rs  structured_logging.rs  types.rs  walkthrough_parser.rs  workspace_dir.rs
mcp-server/tests/: comment_parser_diff_test.rs  daemon_integration_tests.rs  daemon_readiness_test.rs  manual_process_test.rs  synthetic_pr_integration_test.rs  taskspace_tools_test.rs
md/: SUMMARY.md  about.md  ask-socratic-shell.md  collaborative-prompting.md  contribute.md  faq.md  ide-capabilities.md  implementation-overview.md  install.md  installation.md  interface-plan.md  introduction.md  learn-more.md  our-vision.md  present-review.md  quick-start.md  review-format.md  review-presentation.md  setup.md  synthetic-pr.md  tenets.md  walkthrough-presentation.md  walkthroughs.md  window-stacking-design.md
md-rfd-preprocessor/: Cargo.toml
md/ref/: app.md  (+10 more)
setup/: Cargo.toml
symposium/mcp-server/: Cargo.toml
symposium/mcp-server/src/: agent_manager.rs  daemon.rs  ipc.rs  main.rs  server.rs  types.rs  walkthrough_parser.rs
symposium/mcp-server/src/actor/: dispatch.rs  reference.rs  repeater.rs
symposium/mcp-server/src/guidance/: walkthrough-format.md
symposium/mcp-server/test-utils/: Cargo.toml
symposium/mcp-server/tests/: daemon_integration_tests.rs  reference_integration_test.rs  taskspace_tools_test.rs
theme/: custom.css
(+338 files in other folders)
